tests/analyzer/errors/struct_literal.rv
struct Vec2 {
    x: int,
    y: bool,
}

fn main() {
    var v = Vec2 { y = 1, x = true }
    var v = Vec2 { x = true, y = false }
    var v = Vec2 { x = 1, y = true, x = 5 }
}
